Fixed overflow bug in recipe show

--- a/frontend/src/components/stylesheets/recipes_index/recipe_show.scss
+++ b/frontend/src/components/stylesheets/recipes_index/recipe_show.scss
@@ -82,6 +82,7 @@
   list-style: none;
   overflow-y: scroll;
   // background: orange;
+  height: 80%;
   width: 92%;
   margin: 0 auto;
   font-family: EB Garamond;
@@ -94,6 +95,7 @@
   list-style: decimal outside none;
   overflow-y: scroll;
   width: 92%;
+  height: 80%;
   margin: 0 auto;
   font-family: EB Garamond;
   padding-left: 13px;
